--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "lottie-web": "^5.10.1",
+    "ngx-lottie": "^10.0.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.6",
     "tslib": "^2.3.0",
